plugins 
{
	id 'java-library'
}

description = 'Provided service support for bpmn'

group = 'org.activecomponents.jadex'

if(System.getProperty("PUBLISH_SCRIPT_PATH"))
	apply from: System.getProperty("PUBLISH_SCRIPT_PATH")

java
{
	sourceCompatibility = '1.17'
}

repositories
{
	mavenCentral()
}

dependencies
{
	def v = System.getProperty('JADEX_VERSION')?:'+'
	implementation 'org.activecomponents.jadex:common:'+v
	implementation 'org.activecomponents.jadex:collection:'+v
	implementation 'org.activecomponents.jadex:traverser:'+v
	implementation 'org.activecomponents.jadex:javaparser:'+v
	implementation 'org.activecomponents.jadex:bytecode:'+v
	implementation 'org.activecomponents.jadex:core:'+v
	implementation 'org.activecomponents.jadex:execution:'+v
	implementation 'org.activecomponents.jadex:injection:'+v
	implementation 'org.activecomponents.jadex:serialization:'+v
	implementation 'org.activecomponents.jadex:providedservice:'+v
	implementation 'org.activecomponents.jadex:bpmn:'+v
	implementation 'org.activecomponents.jadex:providedservice:'+v
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
}

processResources 
{
    from ('src/main/java') 
    {
        include '**/.system'
    }
}
